--- a/dd.css
+++ b/dd.css
@@ -1,23 +1,47 @@
 body {
-  background: black;
+  background: #90a099;
 }
 
 .credits {
   float: right;
+  background-color: #788;
+  padding: 10px;
+  border-radius: 5px;
+  margin-right: 25%;
+}
+
+.highlight-section {
+  background-color: #788;
+  padding: 10px;
+  border-radius: 5px;
+  width: 400px;
+}
+
+.tagline {
+  margin-left: 30px;
+  margin-top: -15px;
 }
 
 .title {
   background: black;
-  color: white;
-  margin-top: -113px;
+  color: #EEEEEE;
+  margin-top: -143px;
   padding-left: 40px;
   width: 270px;
   z-index: 5;
 }
 
+.writings {
+  min-height: 200px;
+}
+
 h1 {
   font-size: 40pt;
   margin: 0px;
+}
+
+h2 {
+  color: #443;
 }
 
 .col-left, .col-right {
@@ -27,12 +51,44 @@ h1 {
 }
 
 h3 {
-  color: #BBBBBB;
+  color: #443;
   padding-left: 20px;
 }
 
-p {
+h5 {
+  color: #ddd;
+}
+
+h6 {
+  color: #665;
+  font-size: 0.8em;
+}
+
+h6 > a {
+  color: #554;
+}
+
+p, pre {
   width: 400px;
-  color: #BBBBBB;
+  color: #100;
   padding-left: 20px;
+  font-size: 1.2em;
+  line-height: 1.2;
+}
+
+a {
+  text-decoration: none;
+  color: #BBBBBB;
+}
+
+a:hover, a > h3:hover {
+  color: #ddd;
+}
+
+strong {
+  color: #776;
+}
+
+.section-title {
+  margin-bottom: -10px;
 }
